[gd_scene load_steps=3 format=3 uid="uid://kvlhp3x456p0"]

[ext_resource type="Script" path="res://scripts/status_bars.gd" id="1_dvku3"]

[sub_resource type="LabelSettings" id="LabelSettings_q7yo2"]

[node name="status_bars" type="CanvasLayer"]
script = ExtResource("1_dvku3")

[node name="HealthBar" type="ProgressBar" parent="."]
anchors_preset = -1
anchor_left = 0.041
anchor_top = 0.032
anchor_right = 0.041
anchor_bottom = 0.032
offset_left = -0.232002
offset_top = 0.264
offset_right = 426.768
offset_bottom = 29.264
max_value = 5.0
step = 0.25
show_percentage = false

[node name="HealthLabel" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.227
anchor_top = 0.053
anchor_right = 0.227
anchor_bottom = 0.053
offset_left = -48.504
offset_top = -11.344
offset_right = 47.496
offset_bottom = 11.656
label_settings = SubResource("LabelSettings_q7yo2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HungerBar" type="ProgressBar" parent="."]
anchors_preset = -1
anchor_left = 0.041
anchor_top = 0.086
anchor_right = 0.041
anchor_bottom = 0.086
offset_left = -0.232002
offset_top = 0.271999
offset_right = 426.768
offset_bottom = 29.272
max_value = 10.0
step = 0.5
show_percentage = false

[node name="HungerLabel" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.227
anchor_top = 0.106
anchor_right = 0.227
anchor_bottom = 0.106
offset_left = -48.504
offset_top = -10.688
offset_right = 47.496
offset_bottom = 12.312
label_settings = SubResource("LabelSettings_q7yo2")
horizontal_alignment = 1
vertical_alignment = 1
